Rapid Prd/src/objects/MID__c.object
<CustomObject>
    <fields>
        <fullName>Import_Id__c</fullName>
        <label>Import Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Import_Source__c</fullName>
        <label>Import Source</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>MIDs</relationshipLabel>
        <relationshipName>MIDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MID</fullName>
                </value>
                <value>
                    <fullName>AMEX ONLY GCS MID</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>MID</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>MID No.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MID</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>